# cs231a_ws

./: README.md
ps0_ws/: CMakeLists.txt
ps0_ws/src/apps/: basic_manipulation_app.cpp
ps1_ws/: CMakeLists.txt
ps1_ws/data/: back_image.txt  front_image.txt  real_XY.txt  test2.py
ps1_ws/src/apps/: affine_camera_app.cpp  single_view_geometry_app.cpp
ps2_ws/: CMakeLists.txt
ps2_ws/data/: dense_matches.txt  fundamental_matrices.txt  matches_subset.txt  test.py  unit_test_camera_matrix.txt  unit_test_image_matches.txt
ps2_ws/data/set1/: pt_3D.txt
ps2_ws/data/statue/: dense_matches.txt  fundamental_matrices.txt  matches_subset.txt
ps2_ws/include/: SnavelyReprojectionError.h  epipolar_alg.hpp  reconstruction_alg.hpp  sfm_pipeline.hpp  triangulation_alg.hpp
ps2_ws/src/: epipolar_alg.cpp  reconstruction_alg.cpp  sfm_pipeline.cpp  triangulation_alg.cpp
ps2_ws/src/apps/: cloud_filter_app.cpp  factorization_method_app.cpp  fundamental_matrix_app.cpp  image_rectification_app.cpp  sfm_pipeline_app.cpp  triangulation_app.cpp
